Mobile resp width overflow fix?

--- a/counter/static/counter/styles.css
+++ b/counter/static/counter/styles.css
@@ -1,3 +1,8 @@
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .group-header {
   font-size: 2.8em;
 }
